# Hybrid-LLM-Feedback-Loop

./: .env.example  COMMANDS.md  README.md  SIMPLE_SETUP.md  System Design.md  icpc.db  launch_chromium.py  launch_chromium.sh  pyproject.toml  run_solver_2041A.py  run_solver_2043C.py  run_solver_gpt4_codestral.py  run_solver_gpt4_deepseek.py  run_solver_gpt4_llama.py  run_solver_gpt5_codestral.py  run_solver_gpt5_deepseek.py  run_solver_gpt5_llama.py  script.js  styles.css
api_responses/: submission_339631265_20250921_035531.json  submission_339631265_20250927_222106.json  submission_339631265_20250927_222216.json  submission_340792986_20250927_222359.json  submission_342024255_20251005_204555.json  submission_346750735_20251031_062508.json  submission_346751243_20251031_063836.json  submission_346751243_20251031_063914.json  submission_347479486_20251105_051529.json  submission_347479655_20251105_052045.json  submission_347481144_20251105_061831.json
core/: __init__.py  analyze_problem_ratings.py  analyze_problem_tags.py  automated_solver.py  codeforces_client.py  config.py  data_loader.py  db.py  fill_missing_problems.py  judge_cf.py  llm_gateway.py  models.py  orchestrator.py  problem_scraper.py  problemset_client.py  runner_local.py  solution_saver.py  workflow_manager.py
hybrid_llm_icpc_lite.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
problems/: 2038-A.json  2038-C.json  2038-L.json  2039-C1.json  2039-C2.json  2039-D.json  2040-C.json  2041-A.json  2041-B.json  2041-D.json  2041-E.json  2042-C.json  2043-C.json  2043-D.json  2044-E.json  2044-G1.json  (+183 more)
(+21238 files in other folders)
